--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,8 +7,20 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
-<%= yield %>
-
+	<div class="navbar navbar-inverse navbar-fixed-top">
+	    <div class="navbar-inner">
+			<div class="container">
+		    	<a class="brand" >Treebook</a>
+			    <ul class="nav">
+				    <li class="active"><%= link_to 'All statuses', statuses_path %></li>
+				    <li><a href="#">Link</a></li>
+				    <li><a href="#">Link</a></li>
+			    </ul>
+	    	</div>
+	    </div>
+	</div>
+	<div class="container">
+		<%= yield %>
+	</div>
 </body>
 </html>
