--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,9 +13,16 @@
 		    	<a class="brand" >Treebook</a>
 			    <ul class="nav">
 				    <li class="active"><%= link_to 'All statuses', statuses_path %></li>
-				    <li><a href="#">Link</a></li>
-				    <li><a href="#">Link</a></li>
-			    </ul>
+				</ul>
+			    <ul class="nav pull-right">
+			    	<% if user_signed_in? %>
+					    <li><%= link_to current_user.full_name, edit_user_registration_path %></li>
+					    <li><%= link_to "Log out", destroy_user_session_path, method: :delete %></li>
+					<% else %>
+						<li><%= link_to "Register", new_user_registration_path %> </li>
+						<li><%= link_to "Login", new_user_session_path %> </li>
+				    <% end %>
+    			</ul>
 	    	</div>
 	    </div>
 	</div>
