Continued editing Styling on user edit page

--- a/app/views/statuses/index.html.erb
+++ b/app/views/statuses/index.html.erb
@@ -2,7 +2,7 @@
   <h1>All of the statuses</h1>
 </div>
 <div>
-  <%= link_to "Post a new status", new_status_path, class: "btn btn-success" %>
+  <%= link_to "Post a new status", new_status_path, class: "btn btn-success pull-right" %>
 </div>
 <% @statuses.each do |status| %>
   <div class="status">
