--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
 	<div class="navbar navbar-inverse navbar-fixed-top">
 	    <div class="navbar-inner">
 			<div class="container">
-		    	<a class="brand" >Treebook</a>
+				<%= link_to "Treebook", root_path, class: "brand" %>
 			    <ul class="nav">
 				    <li class="active"><%= link_to 'All statuses', statuses_path %></li>
 				</ul>
@@ -27,8 +27,12 @@
 	    </div>
 	</div>
 	<div class="container">
-	   <p class="notice"><%= notice %></p>
-	   <p class="alert"><%= alert %></p>
+		<% flash.each do |type, message| %>
+			<div class="alert <%= flash_class type %>">
+				<button class="close" data-dismiss="alert">x</button>
+				<%= message %>
+			</div>
+		<% end %>
 		<%= yield %>
 	</div>
 </body>
