--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,14 +26,21 @@
 	    	</div>
 	    </div>
 	</div>
-	<div class="container">
-		<% flash.each do |type, message| %>
-			<div class="alert <%= flash_class type %>">
-				<button class="close" data-dismiss="alert">x</button>
-				<%= message %>
-			</div>
-		<% end %>
-		<%= yield %>
+	<div class="wrapper">
+		<div class="container">
+			<% flash.each do |type, message| %>
+				<div class="alert <%= flash_class type %>">
+					<button class="close" data-dismiss="alert">x</button>
+					<%= message %>
+				</div>
+			<% end %>
+			<%= yield %>
+		</div>
+	</div>
+	<div class="footer">
+		<div class="container">
+			<p class="muted credit">Ole Henrik Skogstrøm</p>
+		</div>
 	</div>
 </body>
 </html>
